# rbot

./: README.md
rbot/: CMakeLists.txt  package.xml
rbot_cv_pipeline/: CMakeLists.txt  nodelet_plugins.xml  package.xml
rbot_cv_pipeline/include/rbot_cv_pipeline/: cv_blocks.hpp  cvt_color.hpp  image_splitter.hpp  img_flip.hpp
rbot_cv_pipeline/src/nodelets/: cvt_color.cpp  img_flip.cpp  stereo_image_splitter.cpp
rbot_cv_pipeline/src/nodes/: cvt_color.cpp  (+2 more)
rbot_msgs/: CMakeLists.txt  package.xml
rbot_msgs/msg/: AHRS.msg  AccelBool.msg  ActionInfo.msg  ControlCommand.msg  ControlCommandStamped.msg  CubicTrajectoryPoint.msg  DifferentialDriveFeedback.msg  DifferentialDriveJointFeedback.msg  Imu.msg  JoystickAxisFloat32.msg  JoystickAxisInt32.msg  JoystickMsg.msg  JoystickMsgStamped.msg  Motion.msg  MotionBool.msg  NED.msg  NavSatFix.msg  PoseBool.msg  PriorityInputDetails.msg  QuaternionBool.msg  SensorModel1D.msg  SensorModel3D.msg  SensorModelValidity.msg  State.msg  State.msg.old  StateBool.msg  StateFeedback.msg  StateStamped.msg  TimedTrajectoryPoint.msg  TwistBool.msg  Vector3Bool.msg  WheelFeedback.msg
rbot_msgs/srv/: CalibrateSensorModel1D.srv  CalibrateSensorModel3D.srv  ControllerInfo.srv  CubicTrajectory.srv  Help.srv  TimedTrajectory.srv
rbot_sim_integration/: CMakeLists.txt  package.xml
rbot_sim_integration/launch/: gazebo.launch
rbot_sim_integration/scripts/: export.sh
rbot_utils/: CMakeLists.txt  package.xml  setup.py
rbot_utils/test/: algorithm.hpp  array.hpp  introspection.hpp  math.hpp  non_ros.cpp  ros.cpp  threshold.hpp  transform.hpp
(+87 files in other folders)
